--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "node-sass": "^4.10.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-router-dom": "^4.3.1",
@@ -16,7 +17,6 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000/",
-
   "eslintConfig": {
     "extends": "react-app"
   },
